--- a/mainScss.scss
+++ b/mainScss.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Montserrat:wght@400;500;600;700&display=swap');
-
-@import 'style/anibreakpoints.scss';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap');
+@import 'style/styles.scss';
 @import 'style/nullstyle.scss';
+@import 'style/animation.scss';
+@import 'style/footerStyle.scss';
 
 //
 %flexCenter {
@@ -81,7 +83,7 @@ body {
     }
     .promo__header {
       font-size: 3rem;
-      color: hsl(352, 77, 35);
+      color: $mainColor;
     }
     .promo__subheader {
       padding: 3rem 0 1rem;
@@ -96,17 +98,17 @@ body {
       display: block;
       margin: 2rem auto;
       letter-spacing: 1px;
-      background-color: hsl(352, 77, 35);
-      color: rgb(220, 220, 220);
+      background-color: $mainColor;
+      color: $secondColorLight;
       border-radius: 10px;
       padding: 15px 0;
       font-weight: 600;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
         rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
       &:hover {
-        background: rgb(220, 220, 220);
-        border: 1px solid hsl(352, 77, 35);
-        color: hsl(352, 77, 35);
+        background: $secondColorLight;
+        border: 1px solid $mainColor;
+        color: $mainColor;
         padding: 14px 0;
       }
       &:active {
@@ -200,7 +202,7 @@ body {
       margin-right: 1.5rem;
       cursor: pointer;
       &:hover {
-        color: hsl(352, 77, 30);
+        color: $hoverColor;
       }
       &:last-of-type {
         margin-right: 0px;
@@ -219,14 +221,14 @@ body {
     color: rgb(27, 27, 27);
     position: relative;
     &.nav__link--active {
-      color: hsl(352, 77, 38);
+      color: $activeColor;
     }
     &::before,
     &::after {
       content: '';
       width: 100%;
       height: 1px;
-      background: hsl(352, 77, 30);
+      background: $hoverColor;
       position: absolute;
       margin: -3px 0;
       left: 0;
@@ -267,7 +269,7 @@ body {
       margin-right: 1.5rem;
       cursor: pointer;
       &:hover {
-        color: hsl(352, 77, 30);
+        color: $hoverColor;
       }
       &:last-of-type {
         margin-right: 0px;
@@ -299,7 +301,7 @@ body {
   justify-content: center;
   flex-direction: column;
 
-  background-color: rgb(220, 220, 220);
+  background-color: $secondColorLight;
 }
 
 .reservation__container {
@@ -313,7 +315,7 @@ body {
   padding-bottom: 2.5rem;
 }
 .reservation__note {
-  background-color: rgb(200, 200, 200);
+  background-color: $secondColorDark;
   padding: 3rem 0rem;
 }
 .reservation__info {
@@ -380,10 +382,10 @@ body {
   position: relative;
 }
 .btn {
-  background-color: rgb(220, 220, 220);
-  border: 1px solid rgb(200, 200, 200);
+  background-color: $secondColorLight;
+  border: 1px solid $secondColorDark;
   border-radius: 10px;
-  color: hsl(352, 77, 35);
+  color: $mainColor;
   padding: 10px 20px;
 }
 .btn__download {
@@ -392,8 +394,8 @@ body {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
   &:hover {
-    background-color: rgb(200, 200, 200);
-    color: hsl(352, 77, 40);
+    background-color: $secondColorDark;
+    color: $activeColor;
   }
   &:active {
     transform: scale(0.98);
@@ -431,11 +433,11 @@ body {
     }
   }
   .operation__tab--active {
-    transform: translateY(-66%);
-    transition: 0.4s;
+    transform: translateY(-66%) scale(1.4);
+    transition: transform 0.4s;
     font-weight: 600;
     color: black;
-    border-bottom: 1px solid hsl(352, 77, 38);
+    border-bottom: 1px solid $activeColor;
   }
 }
 
@@ -471,7 +473,7 @@ body {
 
   .operation__meal {
     max-width: 600px;
-    height: 180px;
+    height: 210px;
     border: 1px solid rgb(112, 112, 112);
     gap: 2rem;
     display: flex;
@@ -495,20 +497,21 @@ body {
     .operation__description {
       position: relative;
       width: 400px;
-      margin: 1rem;
+      margin: 0.5rem 1rem 0 0;
+      padding: 5px;
       .operation__mealname {
         font-size: 20px;
         font-weight: 600;
         margin-bottom: 1rem;
       }
       .operation__meal-content {
-        max-width: 300px;
+        max-width: 330px;
       }
       .operation__price {
         float: right;
         font-weight: 600;
         font-size: 18px;
-        color: hsl(352, 77, 30);
+        color: $hoverColor;
       }
     }
   }
@@ -618,7 +621,7 @@ body {
 }
 
 .footer {
-  background: rgb(220, 220, 220);
+  background: $secondColorLight;
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -657,7 +660,7 @@ body {
       content: '';
       width: 100%;
       height: 1px;
-      background: hsl(352, 77, 30);
+      background: $hoverColor;
       position: absolute;
       margin: -3px 0;
       left: 0;
@@ -679,7 +682,7 @@ body {
   margin-right: 1.5rem;
   cursor: pointer;
   &:hover {
-    color: hsl(352, 77, 30);
+    color: $hoverColor;
   }
   &:last-of-type {
     margin-right: 0px;
@@ -697,7 +700,7 @@ body {
   top: -100%;
   left: 0;
   right: 0;
-  background-color: rgb(200, 200, 200);
+  background-color: $secondColorDark;
   color: rgb(31, 31, 31);
   padding: 1rem;
   z-index: 99;
@@ -739,7 +742,7 @@ body {
 
 /////////////////////////// SUBSCRIBE
 .subscribe {
-  background: rgb(200, 200, 200);
+  background: $secondColorDark;
 }
 
 .subscribe__container {
@@ -789,17 +792,17 @@ body {
     display: block;
     margin: auto;
     letter-spacing: 1px;
-    background-color: hsl(352, 77, 35);
-    color: rgb(220, 220, 220);
+    background-color: $mainColor;
+    color: $secondColorLight;
     border-radius: 10px;
     padding: 15px 0;
     font-weight: 600;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
       rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     &:hover {
-      background: rgb(220, 220, 220);
-      border: 1px solid hsl(352, 77, 35);
-      color: hsl(352, 77, 35);
+      background: $secondColorLight;
+      border: 1px solid $mainColor;
+      color: $mainColor;
       padding: 14px 0;
     }
     &:active {
