--- a/style/nullstyle.css
+++ b/style/nullstyle.css
@@ -13,10 +13,14 @@ input {
   outline: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-height: 100vh;
   width: 100%;
-  scroll-behavior: smooth;
+  font-family: 'Lora', serif;
 }
 
 ul,
@@ -39,7 +43,7 @@ input,
 button,
 textarea,
 select {
-  font: inherit;
+  font-family: 'Montserrat', sans-serif;
 }
 
 button {
