--- a/secondStyle.css
+++ b/secondStyle.css
@@ -1674,21 +1674,76 @@ body {
   }
 }
 
-.nav__container-outside {
-  position: absolute;
-  background-color: rgba(191, 191, 191, 0.8);
-  height: 8vh;
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+a:focus,
+a:active,
+input {
+  outline: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  min-height: 100vh;
   width: 100%;
+  font-family: 'Lora', serif;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img,
+video {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font-family: 'Montserrat', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+.header__subscribe {
+  background: rgba(191, 191, 191, 0.8);
+  position: relative;
 }
 
 .navbar__container--sub {
   font-size: 18px;
   font-weight: 600;
-  margin: 1rem auto;
+  margin: auto;
   width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 70px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1719,6 +1774,10 @@ body {
 
 .navbar__container--sub .nav__items {
   padding-right: 1.8rem;
+}
+
+.navbar__container--sub .logohome--nav {
+  display: none;
 }
 
 .navbar__container--sub .nav__link {
@@ -1768,12 +1827,8 @@ body {
 }
 
 .navbar__container--sub .nav__toggle {
-  z-index: 3;
-  position: fixed;
-  top: 1.5rem;
-  right: 1.5rem;
-  font-size: 1.5rem;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   cursor: pointer;
 }
 
@@ -1919,7 +1974,7 @@ body {
   margin-bottom: 2rem;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1310px) {
   .navbar__container--sub {
     width: 100%;
   }
@@ -1929,6 +1984,73 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
+  .navbar__container--sub {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    scroll-behavior: no;
+  }
+  .navbar__container--sub .logohome--nav {
+    display: block;
+  }
+  .navbar__container--sub .nav__toggle {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    z-index: 3;
+    visibility: visible;
+    opacity: 1;
+    font-size: 2rem;
+  }
+  .navbar__container--sub .nav--open.nav__list {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+    -webkit-box-shadow: rgba(0, 0, 0, 0.35) -5px 0px 10px;
+            box-shadow: rgba(0, 0, 0, 0.35) -5px 0px 10px;
+  }
+  .nav__list {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 80%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 2.5rem;
+    z-index: 10;
+    background: #ebdbdb;
+    opacity: 1;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+  .nav__list .ri-close-fill {
+    visibility: visible;
+    position: absolute;
+    bottom: 1.6rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .nav__list .nav__socials {
+    visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .nav__list .nav__items {
+    padding-right: 0;
+  }
   .subscribe__container {
     margin: 0rem 0 1rem;
     width: 70%;
@@ -1960,12 +2082,6 @@ body {
     margin-bottom: 0.5rem;
     text-align: center;
   }
-  .subscribe__container .subscribe__right form {
-    margin: 1rem;
-  }
-  .subscribe__container .subscribe__right form button {
-    margin: 0.5rem auto 0;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1978,6 +2094,9 @@ body {
 }
 
 @media screen and (max-width: 630px) {
+  .nav__list {
+    row-gap: 1.7rem;
+  }
   .subscribe__container {
     margin: 0rem 0 1rem;
     width: 80%;
@@ -2002,29 +2121,17 @@ body {
 }
 
 @media screen and (max-width: 400px) {
-  .subscribe__container {
-    margin: 0rem 0 1rem;
-    width: 90%;
-    height: 90vh;
+  .logohome--nav {
+    padding: 0 1rem;
   }
   .subscribe__container .subscribe__left img {
     width: 150px;
   }
-  .subscribe__container .subscribe__right {
-    -ms-flex-preferred-size: 70%;
-        flex-basis: 70%;
-    padding: 0rem 1rem;
-  }
-  .subscribe__container .subscribe__right .sub__header {
-    font-size: 18px;
-  }
   .subscribe__container .subscribe__right .sub__content {
-    margin-bottom: 1rem;
     font-size: 14px;
   }
   .subscribe__container .subscribe__right form {
     width: 100%;
-    margin: 0rem 0 1rem;
   }
 }
 /*# sourceMappingURL=secondStyle.css.map */
