--- a/style/footerStyle.css
+++ b/style/footerStyle.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap");
 .footer {
   background: gainsboro;
   display: -webkit-box;
