--- a/style/styles.css
+++ b/style/styles.css
@@ -1,1 +1,3 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap");
+/*# sourceMappingURL=styles.css.map */
