--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap');
+
 // //////////////////////////////////////// SAMPLE
 %flexCenter {
   display: flex;
