--- a/mainStyle.css
+++ b/mainStyle.css
@@ -663,6 +663,32 @@ body {
   transition: 0.4s;
 }
 
+@-webkit-keyframes linkFadeIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@keyframes linkFadeIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(50%);
+            transform: translateX(50%);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
 .section--hidden {
   opacity: 0;
   -webkit-transform: translateY(8rem);
@@ -1490,6 +1516,9 @@ body {
   .nav__list .logohome img {
     width: 100%;
     margin: auto;
+  }
+  .nav__list .nav__link {
+    opacity: 0;
   }
   .nav__list .ri-close-fill {
     visibility: visible;
