--- a/style/navbar.css
+++ b/style/navbar.css
@@ -52,6 +52,10 @@ button {
   cursor: pointer;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .navbar__container--sub {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -61,11 +65,26 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 18px;
   min-height: 8vh;
   width: 100%;
   background: rgba(200, 200, 200, 0.7);
   position: absolute;
   top: 0;
+}
+
+.navbar__container--sub.nav__overlay--sub {
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .nav__list--sub {
@@ -90,6 +109,8 @@ button {
 .nav__list--sub.show__nav--sub {
   -webkit-transform: translateX(0%);
           transform: translateX(0%);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) -5px 0px 10px;
+          box-shadow: rgba(0, 0, 0, 0.35) -5px 0px 10px;
 }
 
 .nav__list--sub .nav__link--sub {
@@ -198,10 +219,8 @@ button {
 
 @media screen and (max-width: 950px) {
   .navbar__container--sub {
+    height: 100vh;
     background: transparent;
-  }
-  body {
-    overflow-x: hidden;
   }
   .nav__list--sub .logohome--nav {
     display: block;
@@ -212,7 +231,7 @@ button {
   }
   .nav__list--sub {
     z-index: 20;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     height: 100vh;
