--- a/style/styleGallery.scss
+++ b/style/styleGallery.scss
@@ -14,7 +14,7 @@ html.is-animating .transition-qwe {
 }
 
 .gallery {
-  background-image: url(https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621361506488-4SUQZSLFUHWJY0Q64GQN/brewery+2.jpg?format=1500w);
+  background-image: url(https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1569107182125-E0FH6NLOPT4HHJFORS2O/steve+anthony.jpg?format=1000w);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -66,7 +66,25 @@ html.is-animating .transition-qwe {
 }
 
 // PREVIEW PHOTO
-
+.overlayBox {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  &.nav__overlay--sub {
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(3px);
+    transition: 0.4s;
+  }
+}
 .preview-box {
   z-index: 15;
   position: fixed;
@@ -81,6 +99,7 @@ html.is-animating .transition-qwe {
   padding: 1rem;
   opacity: 0;
   pointer-events: none;
+
   &.show {
     opacity: 1;
     pointer-events: auto;
