--- a/style/deliveryStyle.scss
+++ b/style/deliveryStyle.scss
@@ -147,7 +147,7 @@
     width: 130px;
     text-align: center;
     display: block;
-    margin-top: 10px;
+    margin-top: 1rem;
     letter-spacing: 1px;
     background-color: $mainColor;
     color: $secondColorLight;
