--- a/mainStyle.scss
+++ b/mainStyle.scss
@@ -983,6 +983,17 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+  .header {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: url(material/resize/entry.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    overflow-x: hidden;
+  }
   .operation__field {
     .operation__meal {
       max-width: 250px;
