--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1593,7 +1593,7 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(material/resize/entry.jpg);
+    background: url(material/resize/lclclc.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
