--- a/mainStyle.scss
+++ b/mainStyle.scss
@@ -987,11 +987,10 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(material/resize/lclclc.jpg);
-    background-size: cover;
+    background: url(material/resize/entry.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
+
     overflow-x: hidden;
   }
   .operation__field {
