--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1593,11 +1593,9 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(material/resize/lclclc.jpg);
-    background-size: cover;
+    background: url(material/resize/entry.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
     overflow-x: hidden;
   }
   .operation__field .operation__meal {
